[gd_scene load_steps=10 format=2]

[ext_resource path="res://stages/Level.gd" type="Script" id=1]
[ext_resource path="res://Players/Player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Players/Player3.tscn" type="PackedScene" id=3]
[ext_resource path="res://terrain/wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Players/Player2.tscn" type="PackedScene" id=5]
[ext_resource path="res://terrain/Border_walls.tscn" type="PackedScene" id=6]
[ext_resource path="res://terrain/cracked_walls.tscn" type="PackedScene" id=7]
[ext_resource path="res://laser/Emitter.tscn" type="PackedScene" id=9]
[ext_resource path="res://laser/Reciever.tscn" type="PackedScene" id=10]

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )
level_number = 1

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 848, 360 )

[node name="player2" parent="." instance=ExtResource( 5 )]
position = Vector2( 936, 344 )

[node name="player3" parent="." instance=ExtResource( 3 )]
position = Vector2( 952, 488 )
collision_mask = 53

[node name="terrainWalls" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 7, 0, 0, 65543, 0, 0, 65549, 0, 0, 131079, 0, 0, 131085, 0, 0, 196618, 0, 0, 196621, 0, 0, 262146, 0, 0, 262154, 0, 0, 327682, 0, 0, 327686, 0, 0, 327690, 0, 0, 393218, 0, 0, 393222, 0, 0, 458758, 0, 0 )

[node name="BorderWall" parent="." instance=ExtResource( 6 )]

[node name="CrackedWallsContainer" type="Node" parent="."]

[node name="CrackedWall" parent="CrackedWallsContainer" instance=ExtResource( 7 )]
position = Vector2( 448, 192 )

[node name="CrackedWall2" parent="CrackedWallsContainer" instance=ExtResource( 7 )]
position = Vector2( 448, 256 )

[node name="CrackedWall3" parent="CrackedWallsContainer" instance=ExtResource( 7 )]
position = Vector2( 384, 256 )

[node name="CrackedWall4" parent="CrackedWallsContainer" instance=ExtResource( 7 )]
position = Vector2( 384, 192 )

[node name="CrackedWall5" parent="CrackedWallsContainer" instance=ExtResource( 7 )]
position = Vector2( 640, 384 )

[node name="CrackedWall6" parent="CrackedWallsContainer" instance=ExtResource( 7 )]
position = Vector2( 640, 448 )

[node name="CrackedWall7" parent="CrackedWallsContainer" instance=ExtResource( 7 )]
position = Vector2( 640, 512 )

[node name="Emitter" parent="." instance=ExtResource( 9 )]
position = Vector2( 992, 288 )
rotation = 3.14159

[node name="Reciever" parent="." instance=ExtResource( 10 )]
position = Vector2( 32, 224 )

[node name="Title" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 439.0
margin_top = 584.0
margin_right = 585.0
margin_bottom = 626.0
text = "1: Connecting the Dots
"
align = 1

[node name="NextButton" type="Button" parent="."]
visible = false
margin_left = 448.0
margin_top = 360.0
margin_right = 576.0
margin_bottom = 402.0
text = "Next"

[node name="SolveButton" type="Button" parent="."]
visible = false
margin_left = 851.0
margin_top = 222.0
margin_right = 974.0
margin_bottom = 264.0
text = "Solve"

[node name="DieButton" type="Button" parent="."]
visible = false
margin_left = 852.0
margin_top = 283.0
margin_right = 975.0
margin_bottom = 325.0
text = "Die"

[node name="TimeLabel" type="Label" parent="."]
margin_left = 7.0
margin_top = 581.0
margin_right = 83.0
margin_bottom = 613.0
text = "0"

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="SolveButton" to="." method="_on_SolveButton_pressed"]
[connection signal="pressed" from="DieButton" to="." method="_on_DieButton_pressed"]
